src/cli/renderer/snapshots/thndrs_lib__cli__renderer__live__tests__picker_cjk.snap
---
source: src/cli/renderer/live.rs
assertion_line: 1112
expression: combined
---
width=80:
│   files  type to filter                                                           # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=files [bg=#212337]=   [fg=#3b4261 bg=#212337]=type to filter [bg=#212337]=                                                        [bg=#212337]=  
│   ›  src/日本語.rs                                                                # [bg=#292e42]=   [fg=#e0e0e0 bg=#292e42 b]=› [bg=#292e42]=   [fg=#ebfafa bg=#292e42 b]=src/日本語.rs [bg=#292e42]=                                                             [bg=#292e42]=  
│      src/テスト.rs                                                                # [bg=#212337]=   [bg=#212337]=  [bg=#212337]=   [fg=#ebfafa bg=#212337]=src/テスト.rs [bg=#212337]=                                                             [bg=#212337]=  
│      Cargo.toml                                                                   # [bg=#212337]=   [bg=#212337]=  [bg=#212337]=   [fg=#ebfafa bg=#212337]=Cargo.toml [bg=#212337]=                                                                [bg=#212337]=  
│   Enter select   Esc close                                                        # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=Enter [fg=#3b4261 bg=#212337]= select    [fg=#37f499 bg=#212337 b]=Esc [fg=#3b4261 bg=#212337]= close [bg=#212337]=                                                     [bg=#212337]=  
width=40:
│   files  type to filter                   # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=files [bg=#212337]=   [fg=#3b4261 bg=#212337]=type to filter [bg=#212337]=                [bg=#212337]=  
│   ›  src/日本語.rs                        # [bg=#292e42]=   [fg=#e0e0e0 bg=#292e42 b]=› [bg=#292e42]=   [fg=#ebfafa bg=#292e42 b]=src/日本語.rs [bg=#292e42]=                     [bg=#292e42]=  
│      src/テスト.rs                        # [bg=#212337]=   [bg=#212337]=  [bg=#212337]=   [fg=#ebfafa bg=#212337]=src/テスト.rs [bg=#212337]=                     [bg=#212337]=  
│      Cargo.toml                           # [bg=#212337]=   [bg=#212337]=  [bg=#212337]=   [fg=#ebfafa bg=#212337]=Cargo.toml [bg=#212337]=                        [bg=#212337]=  
│   Enter select   Esc close                # [bg=#212337]=   [fg=#37f499 bg=#212337 b]=Enter [fg=#3b4261 bg=#212337]= select    [fg=#37f499 bg=#212337 b]=Esc [fg=#3b4261 bg=#212337]= close [bg=#212337]=             [bg=#212337]=
